revamp and add next-auth for auth, next-sitemap for generating sitemaps and create a contact page to auto sending emails

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,6 @@
       "@/*": ["./*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "pages/api/user/index.ts", "app/Gallery.tsx"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "pages/api/user/[id].ts", "app/Gallery.tsx"],
   "exclude": ["node_modules"]
 }
